--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -369,10 +369,9 @@
     <div class="row">
 
       <!-- Main Content -->
-      <div class="col" id="main-content">
+      <div class="col" id="__main-content">
 
- 
-          <div id="container">
+        <div class="container mt-5"> <!-- content -->
             {% include 'inc/flashmsg.html' %}
            
             {% block content %}
