--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,9 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
   <title>
     {% block title %} {% endblock %}
   </title>
+
+  <meta name="description" content="{% block description %} {% endblock %}">
+  <meta name="keywords" content="{% block keywords %} {% endblock %}">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
