--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -101,11 +101,11 @@
               <div class="column">
                 <h6 class="dropdown-header">Domain Information 🔍</h6>
                 <a class="dropdown-item" href="{{ url_for('whois_domain') }}"><i class="fas fa-info-circle"></i> WHOIS</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-globe"></i> Reverse Domain</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> CNAME</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> IP Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-link"></i> AAAA Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-route"></i> Traceroute</a>
+                <a class="dropdown-item" href="{{ url_for('reverse_domain') }}"><i class="fas fa-globe"></i> Reverse Domain</a>
+                <a class="dropdown-item" href="{{ url_for('cname_domain') }}"><i class="fas fa-cog"></i> CNAME</a>
+                <a class="dropdown-item" href="{{ url_for('ip_domain') }}"><i class="fas fa-search"></i> IP Lookup</a>
+                <a class="dropdown-item" href="{{ url_for('aaaa_domain') }}"><i class="fas fa-link"></i> AAAA Lookup</a>
+                <a class="dropdown-item" href="{{ url_for('traceroute') }}"><i class="fas fa-route"></i> Traceroute</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-network-wired"></i> Nmap</a>
                 <h6 class="dropdown-header">SpamLists Check 📛</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-ban"></i> Blacklist</a>
