--- a/app/templates/tools/domains/whois.html
+++ b/app/templates/tools/domains/whois.html
@@ -1,8 +1,10 @@
-<!-- app/templates/tools/dmains/whois.html -->
+<!-- app/templates/tools/domains/whois.html -->
  
 {% extends "base.html" %}
 
-{% block title %}{{title}}{% endblock %}
+{% block title %}{{title}} | {{slogan}}{% endblock %}
+{% block description %}{{slogan}}{% endblock %}
+{% block keywords %}{{keywords}}{% endblock %}
 
 
 {% block content %}
@@ -59,77 +61,18 @@
     {% include 'inc/breadcrumbs.html' %}
 
     <h2  class="mb-3">{{title}} <i class="bi bi-info-circle info-icon" data-bs-toggle="modal" data-bs-target="#infoModal"></i></h2>
-    <p  class="mb-3">{{ definition }}</p>
+    <p  class="mb-3">{{ slogan }}</p>
 
     <div class="alert alert-info" role="alert">
         <p class="mb-0">{{ definition }}</p>
     </div>
 
-    <div class="row justify-content-center mb-3">
-        <div class="col-md-8">
-            <form method="POST">
-                {{ form.hidden_tag() }}
-                <div class="row">
-                    <div class="col-md-9">
-                        <div class="form-group">
-                            {{ form.domain.label }}
-                            {{ form.domain(class="form-control") }}
-                            {% for error in form.domain.errors %}
-                            <small class="form-text text-danger">{{ error }}</small>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="col-md-3 d-flex align-items-end">
-                        <button type="submit" class="btn btn-primary w-100">Enviar</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    
-    
+    {% include 'tools/quick_form.html' %}
 
     <hr>
     {% if results %}
         <h3>Resultados de {{ title }}:</h3>
-        <div class="row mb-4">
-            <div class="col-md-3">
-                <div class="card border-info">
-                    <div class="card-body text-center">
-                        <div class="card-icon text-info"><i class="fas fa-stopwatch"></i></div>
-                        <h5 class="card-title">First Contentful Paint (FCP)</h5>
-                        <p class="card-text">2.1 seconds</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-warning">
-                    <div class="card-body text-center">
-                        <div class="card-icon text-warning"><i class="fas fa-image"></i></div>
-                        <h5 class="card-title">Largest Contentful Paint (LCP)</h5>
-                        <p class="card-text">2.94 seconds</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-danger">
-                    <div class="card-body text-center">
-                        <div class="card-icon text-danger"><i class="fas fa-hand-pointer"></i></div>
-                        <h5 class="card-title">First Input Delay (FID)</h5>
-                        <p class="card-text">553 milliseconds</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-primary">
-                    <div class="card-body text-center">
-                        <div class="card-icon text-primary"><i class="fas fa-ruler-combined"></i></div>
-                        <h5 class="card-title">Cumulative Layout Shift (CLS)</h5>
-                        <p class="card-text">0.7813</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+
 
         <div class="row">
             <div class="col-md-6">
@@ -146,23 +89,6 @@
                 <i class="fas fa-exclamation-circle status-icon invalid"></i>
                 <p class="text-danger">Resultados no válidos</p>
                 {% endif %}
-            </div>
-        </div>
-
-        <div class="row mb-4">
-            <div class="col-md-6">
-                <canvas id="fcpEvolution"></canvas>
-            </div>
-            <div class="col-md-6">
-                <canvas id="lcpEvolution"></canvas>
-            </div>
-        </div>
-        <div class="row mb-4">
-            <div class="col-md-6">
-                <canvas id="fidEvolution"></canvas>
-            </div>
-            <div class="col-md-6">
-                <canvas id="clsEvolution"></canvas>
             </div>
         </div>
 
@@ -201,241 +127,10 @@
             <p>No se encontraron resultados válidos.</p>
         {% endif %}
 
-        <h4 class="mb-3">SEO's Data</h4>
-        <div class="row mb-4">
-            <div class="col-md-3">
-                <div class="card border-info">
-                    <div class="card-body text-center">
-                        <div class="card-icon text-info"><i class="fas fa-stopwatch"></i></div>
-                        <h5 class="card-title">First Contentful Paint (FCP)</h5>
-                        <p class="card-text">2.64 seconds</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-warning">
-                    <div class="card-body text-center">
-                        <div class="card-icon text-warning"><i class="fas fa-image"></i></div>
-                        <h5 class="card-title">Largest Contentful Paint (LCP)</h5>
-                        <p class="card-text">3.03 seconds</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-danger">
-                    <div class="card-body text-center">
-                        <div class="card-icon text-danger"><i class="fas fa-hand-pointer"></i></div>
-                        <h5 class="card-title">First Input Delay (FID)</h5>
-                        <p class="card-text">597 milliseconds</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-primary">
-                    <div class="card-body text-center">
-                        <div class="card-icon text-primary"><i class="fas fa-ruler-combined"></i></div>
-                        <h5 class="card-title">Cumulative Layout Shift (CLS)</h5>
-                        <p class="card-text">0.0005</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <h4 class="mb-3">Web Vitals by PageType</h4>
-        <table id="webVitalsPageType" class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Pagetype</th>
-                    <th>Section</th>
-                    <th>Level</th>
-                    <th>FCP</th>
-                    <th>LCP</th>
-                    <th>FID</th>
-                    <th>CLS</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Posts</td>
-                    <td>General</td>
-                    <td>Level 16</td>
-                    <td><span class="text-danger">●</span></td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-success">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                </tr>
-                <tr>
-                    <td>Home</td>
-                    <td>General</td>
-                    <td>Level 0</td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-success">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                </tr>
-                <tr>
-                    <td>Category</td>
-                    <td>General</td>
-                    <td>Level 16</td>
-                    <td><span class="text-danger">●</span></td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-success">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                </tr>
-                <!-- Add more rows as needed -->
-            </tbody>
-        </table>
-
-        <h4 class="mb-3">Web Vitals by Pages</h4>
-        <table id="webVitalsPages" class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Page URL</th>
-                    <th>FCP</th>
-                    <th>LCP</th>
-                    <th>FID</th>
-                    <th>CLS</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>/resultados-bonoloto-jueves-26-de-noviembre-1618</td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                </tr>
-                <tr>
-                    <td>/resultados-bonoloto-sabado-2-de-abril-2057</td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                </tr>
-                <tr>
-                    <td>/resultados-primitiva-jueves-21-de-enero-1798</td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-warning">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                    <td><span class="text-danger">●</span></td>
-                </tr>
-                <!-- Add more rows as needed -->
-            </tbody>
-        </table>
-
+        {% include 'tools/buzz_report.html' %}
 
     {% endif %}
 
-     <!-- Help Modal -->
-     <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="infoModalLabel">{{ title }}</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>{{ definition }}</p>
-                    <p>{{ definition }}</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        var ctx = document.getElementById('duration-chart').getContext('2d');
-        var chart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['Duración del scan'],
-                datasets: [{
-                    label: 'Tiempo (segundos)',
-                    data: [{{ duration }}],
-                backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                borderColor: 'rgba(75, 192, 192, 1)',
-                borderWidth: 1
-            }]
-        },
-            options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
-            });
-        });
-
-
-    const fcpCtx = document.getElementById('fcpEvolution').getContext('2d');
-    const lcpCtx = document.getElementById('lcpEvolution').getContext('2d');
-    const fidCtx = document.getElementById('fidEvolution').getContext('2d');
-    const clsCtx = document.getElementById('clsEvolution').getContext('2d');
-
-    const fcpChart = new Chart(fcpCtx, {
-        type: 'line',
-        data: {
-            labels: ['January', 'February', 'March', 'April', 'May'],
-            datasets: [{
-                label: 'FCP Evolution',
-                data: [2.5, 2.2, 2.3, 2.1, 2.4],
-                borderColor: 'rgba(75, 192, 192, 1)',
-                borderWidth: 2,
-                fill: false
-            }]
-        }
-    });
-
-    const lcpChart = new Chart(lcpCtx, {
-        type: 'line',
-        data: {
-            labels: ['January', 'February', 'March', 'April', 'May'],
-            datasets: [{
-                label: 'LCP Evolution',
-                data: [3.0, 3.2, 3.1, 2.9, 3.3],
-                borderColor: 'rgba(255, 206, 86, 1)',
-                borderWidth: 2,
-                fill: false
-            }]
-        }
-    });
-
-    const fidChart = new Chart(fidCtx, {
-        type: 'line',
-        data: {
-            labels: ['January', 'February', 'March', 'April', 'May'],
-            datasets: [{
-                label: 'FID Evolution',
-                data: [600, 580, 590, 570, 610],
-                borderColor: 'rgba(255, 99, 132, 1)',
-                borderWidth: 2,
-                fill: false
-            }]
-        }
-    });
-
-    const clsChart = new Chart(clsCtx, {
-        type: 'line',
-        data: {
-            labels: ['January', 'February', 'March', 'April', 'May'],
-            datasets: [{
-                label: 'CLS Evolution',
-                data: [0.08, 0.09, 0.07, 0.06, 0.1],
-                borderColor: 'rgba(54, 162, 235, 1)',
-                borderWidth: 2,
-                fill: false
-            }]
-        }
-    });
-</script>
-<script>
-    $(document).ready(function () {
-        $('#webVitalsPageType').DataTable();
-        $('#webVitalsPages').DataTable();
-    });
-</script>
+    {% include 'tools/help_modal.html' %}
 
 {% endblock %}
