--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -148,7 +148,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="accessibilityDropdown" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
-            ♿ Accesibilidad
+            ♿ Accesibilidad & Usabilidad
           </a>
           <ul class="dropdown-menu" aria-labelledby="accessibilityDropdown">
             <div class="dropdown-menu-columns">
