--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -115,26 +115,26 @@
               </div>
               <div class="column">
                 <h6 class="dropdown-header">Mail Server 📬</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-server"></i> MX Discover</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-envelope-open"></i> DMARC</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> SPF Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-signature"></i> DKIM Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-file-alt"></i> TXT Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-key"></i> DNS Key</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-map-marker-alt"></i> LOC Entry</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> IP Sec Key</a>
+                <a class="dropdown-item" href="/tools/domains/mx"><i class="fas fa-server"></i> MX Discover</a>
+                <a class="dropdown-item" href="/tools/domains/dmarc"><i class="fas fa-envelope-open"></i> DMARC</a>
+                <a class="dropdown-item" href="/tools/domains/spf"><i class="fas fa-shield-alt"></i> SPF Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/dkim"><i class="fas fa-signature"></i> DKIM Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/txt"><i class="fas fa-file-alt"></i> TXT Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/dnskey"><i class="fas fa-key"></i> DNS Key</a>
+                <a class="dropdown-item" href="/tools/domains/loc"><i class="fas fa-map-marker-alt"></i> LOC Entry</a>
+                <a class="dropdown-item" href="/tools/domains/ipseckey"><i class="fas fa-shield-alt"></i> IP Sec Key</a>
 
               </div>
               <div class="column">
                 <h6 class="dropdown-header">DNS Lookup 🌐</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-info"></i> SOA Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-sitemap"></i> ASN Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-database"></i> ARIN Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-lock"></i> RRSIG Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-lock"></i> NSEC Lookup</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-envelope"></i> MTA STS</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-key"></i> NSEC3PARAM</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-network-wired"></i> SRV Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/soa"><i class="fas fa-info"></i> SOA Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/asn"><i class="fas fa-sitemap"></i> ASN Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/arin"><i class="fas fa-database"></i> ARIN Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/rrsig"><i class="fas fa-lock"></i> RRSIG Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/nsec"><i class="fas fa-lock"></i> NSEC Lookup</a>
+                <a class="dropdown-item" href="/tools/domains/mtasts"><i class="fas fa-envelope"></i> MTA STS</a>
+                <a class="dropdown-item" href="/tools/domains/nsec3param"><i class="fas fa-key"></i> NSEC3PARAM</a>
+                <a class="dropdown-item" href="/tools/domains/srv"><i class="fas fa-network-wired"></i> SRV Lookup</a>
               </div>
               <div class="column full-width">
                 <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Guias y tutoriales </a>
