--- a/app/templates/tools/seo/titles.html
+++ b/app/templates/tools/seo/titles.html
@@ -54,6 +54,18 @@
                         data-bs-placement="right" title="Missing"
                         data-bs-html="true">
                         <strong>Missing:</strong> {% if
+                        results['Title_1'] %} {{ results['Title_1']}}
+                    </p>
+                    <p class="list-item list-item-border" data-bs-toggle="tooltip"
+                    data-bs-placement="right" title="Missing"
+                    data-bs-html="true">
+                    <strong>Missing:</strong> {% if
+                    results['Title_1_Length'] %} {{ results['Title_1_Length']}}
+                    </p>
+                    <p class="list-item list-item-border" data-bs-toggle="tooltip"
+                        data-bs-placement="right" title="Missing"
+                        data-bs-html="true">
+                        <strong>Missing:</strong> {% if
                         results['Missing'] %}<span
                             class="badge bg-success"><i class="fas fa-check"></i>
                             True</span>{% else
