--- a/app/templates/tools/seo/titles.html
+++ b/app/templates/tools/seo/titles.html
@@ -54,13 +54,13 @@
                         data-bs-placement="right" title="Missing"
                         data-bs-html="true">
                         <strong>Missing:</strong> {% if
-                        results['Title_1'] %} {{ results['Title_1']}}
+                        results['Title_1'] %} {{ results['Title_1']}} {{%endif%}}
                     </p>
                     <p class="list-item list-item-border" data-bs-toggle="tooltip"
                     data-bs-placement="right" title="Missing"
                     data-bs-html="true">
                     <strong>Missing:</strong> {% if
-                    results['Title_1_Length'] %} {{ results['Title_1_Length']}}
+                    results['Title_1_Length'] %} {{ results['Title_1_Length']}}  {{%endif%}}
                     </p>
                     <p class="list-item list-item-border" data-bs-toggle="tooltip"
                         data-bs-placement="right" title="Missing"
