--- a/app/templates/tools/seo/titles.html
+++ b/app/templates/tools/seo/titles.html
@@ -53,14 +53,12 @@
                     <p class="list-item list-item-border" data-bs-toggle="tooltip"
                         data-bs-placement="right" title="Missing"
                         data-bs-html="true">
-                        <strong>Missing:</strong> {% if
-                        results['Title_1'] %} {{ results['Title_1']}} {%endif%}
+                        <strong>Title:</strong> {{ results['Title_1']}} 
                     </p>
                     <p class="list-item list-item-border" data-bs-toggle="tooltip"
                     data-bs-placement="right" title="Missing"
                     data-bs-html="true">
-                    <strong>Missing:</strong> {% if
-                    results['Title_1_Length'] %} {{ results['Title_1_Length']}} {%endif%}
+                    <strong>Title lenght:</strong>{{ results['Title_1_Length']}}
                     </p>
                     <p class="list-item list-item-border" data-bs-toggle="tooltip"
                         data-bs-placement="right" title="Missing"
