--- a/app/templates/tools/quick_form.html
+++ b/app/templates/tools/quick_form.html
@@ -1,23 +1,34 @@
 <div class="row justify-content-center mb-3">
-        <div class="col-md-8">
-            <form method="POST">
-                {{ form.hidden_tag() }}
-                <div class="row">
-                    <div class="col-md-9">
-                        <div class="form-group">
-                            {{ form.domain.label }}
-                            {{ form.domain(class="form-control") }}
-                            {% for error in form.domain.errors %}
-                            <small class="form-text text-danger">{{ error }}</small>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="col-md-3 d-flex align-items-end">
-                        <button type="submit" class="btn btn-primary w-100">Enviar</button>
+    <div class="col-md-8">
+        <form id="myForm" method="POST">
+            {{ form.hidden_tag() }}
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="form-group">
+                        {{ form.domain.label }}
+                        {{ form.domain(class="form-control") }}
+                        {% for error in form.domain.errors %}
+                        <small class="form-text text-danger">{{ error }}</small>
+                        {% endfor %}
                     </div>
                 </div>
-            </form>
-        </div>
+                <div class="col-md-3 d-flex align-items-end">
+                    <button id="submitButton" type="submit" class="btn btn-primary w-100">
+                        <span class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                        <span class="sr-only">Loading...</span>
+                        Enviar
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
-    
-    
+</div>
+
+<script>
+    // Capturar el evento de envío del formulario
+    document.getElementById('myForm').addEventListener('submit', function() {
+        // Mostrar el spinner al hacer clic en Enviar
+        document.getElementById('submitButton').querySelector('.spinner-border').classList.remove('d-none');
+        document.getElementById('submitButton').disabled = true; // Deshabilitar el botón para evitar envíos duplicados
+    });
+</script>
