--- a/app/templates/tools/seo/titles.html
+++ b/app/templates/tools/seo/titles.html
@@ -13,15 +13,18 @@
     .chart-container {
         position: relative;
         margin: auto;
-        height: 100px;
-        width: 100px;
+        height: 150px;
+        width: 150px;
 
     }
 
+    #dangerPercentageChart, #validResultsChart {
+        
+    }
     #durationChart, #totalChecksChart {
 
-        height: 150px!important;
-        width: 150px!important;
+        height: 150px;
+        width: 150px;
 
     }
 
